fixed styling issue where book title was overflowing into rating/status

--- a/client/src/components/book/styles/BookStatus.module.css
+++ b/client/src/components/book/styles/BookStatus.module.css
@@ -1,5 +1,14 @@
+.container {
+    max-width: 100px;
+}
 
 .display {
     display: flex;
     align-items: center;
+}
+
+@media (min-width: 600px) {
+    .container {
+        max-width: unset;
+    }
 }
